--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "homepage": "https://matt3188.github.io/arc-disco-blog/",
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1"
   },
   "scripts": {
